--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@
     background-color: #0f1111;
     color: white;
 } 
+.nav_logo{
+    height: 50px;
+    width: 100px;
+}
 .logo{
-    background-image: url();
+    background-image: url("amazon_logo.png");
+    height: 50px;
+    width: 100px;
+    background-size: cover;
+}
+.border{
+    border: 2px solid transparent;
+}
+.border:hover{
+    border: 1px solid white;
 }
