--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
     font-family: Arial;
     border: border-box;
 }
+/** Box1 **/
 .navbar{
     height: 60px;
     background-color: #0f1111;
     color: white;
     display: flex;
+    align-items: center;
 } 
 .nav_logo{
     height: 50px;
@@ -23,5 +25,21 @@
     border: 2px solid transparent;
 }
 .border:hover{
-    border: 1px solid white;
+    border: 2px solid white;
 }
+
+/*** Box 2 **/
+.add-first  {
+    color: #cccc;
+    font-size: 0.85rem;
+    margin-left: 20px ;
+}
+.add-second{
+    color: white;
+    font-size: 1rem;
+}
+.add-icon{
+    display: flex;
+    align-items: center;
+}
+
