--- a/style.css
+++ b/style.css
@@ -48,20 +48,32 @@
 
 .nav-search{
     display: flex;
+    width: 650px;
+    height: 35px;
+    border-radius: 4px;
+    justify-content: space-evenly;
+    background-color: pink;
     
 }
 .search-select{
-     width: 40px;
-     border-radius: 4px;
-     background-color: #f3f3f3;
+    width: 50px;
+    
+    background-color: #f3f3f3;
+    text-align: center;
+    border: none;
 }
 .search-input{
-    width: 650px;
-    height: 35px;
+   width: 100%;
+    border: none;
+    font-size: 1rem;
 }
 .search-icon{
     background-color: #febd69;
-    width: 40px;
-    border-radius: 4px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
 
 }
+
