--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 } 
 .nav_logo{
     height: 50px;
@@ -57,7 +58,8 @@
 }
 .search-select{
     width: 50px;
-    
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
     background-color: #f3f3f3;
     text-align: center;
     border: none;
@@ -74,5 +76,16 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
 }
 
+/** Box 4 **/
+span{
+    font-size: 0.7rem;
+}
+.nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
