--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@
     border-bottom-right-radius: 4px;
     color: #0f1111;
 }
+.nav-search:hover {
+    border: 2px solid #febd69;
+}
 
 /** Box 4 **/
 span{
