--- a/style.css
+++ b/style.css
@@ -92,3 +92,13 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+/** Box 5 **/
+.nav-cart{
+    display: flex;
+    font-size: 14px;
+    font-weight: 700;
+}
+.nav-cart i{
+    font-size: 28px;
+}
