--- a/style.css
+++ b/style.css
@@ -124,3 +124,10 @@ span{
     width: 90%;
     font-size: 0.85rem;
 }
+
+/** Hero section **/
+.hero-section{
+    background-image: url("hero_image.jpg");
+    height: 600px;
+    background-size: cover;
+}
