--- a/style.css
+++ b/style.css
@@ -151,9 +151,11 @@ span{
 
 /** Shop Section**/
 .shop-section{
-    
+    display: flex;
+    justify-content: space-evenly;
 }
 .box{
     border: 2px solid black;
     height: 100px;
+    width: 23%;
 }
