--- a/style.css
+++ b/style.css
@@ -161,9 +161,14 @@ span{
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
+    margin: 20px;
 }
 .box-img{
     height: 300px;
+    background-image: cover;
+    background-repeat: no-repeat;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .box-content{
     margin-left: 20px;
