--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ span{
 /** Shop Section**/
 .shop-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #e2e7e6;
 }
