--- a/style.css
+++ b/style.css
@@ -157,12 +157,13 @@ span{
     background-color: #e2e7e6;
 }
 .box{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 380px;
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
     margin: 20px;
+    font-weight: 300px;
 }
 .box-img{
     height: 300px;
