--- a/style.css
+++ b/style.css
@@ -186,3 +186,9 @@ span{
     justify-content: space-evenly;
     background-color: #e2e7e6;
 }
+
+/** Footer **/
+.footer-panel1{
+    background-color: #37475a;
+    color: white;
+}
