--- a/style.css
+++ b/style.css
@@ -191,4 +191,8 @@ span{
 .footer-panel1{
     background-color: #37475a;
     color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
