--- a/style.css
+++ b/style.css
@@ -188,6 +188,9 @@ span{
 }
 
 /** Footer **/
+footer{
+    margin-top: 15px;
+}
 .footer-panel1{
     background-color: #37475a;
     color: white;
@@ -195,4 +198,5 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 0.85rem;
 }
