--- a/style.css
+++ b/style.css
@@ -205,10 +205,13 @@ footer{
     color: white ;
     display: flex;
     height: 300px;
-    justify-content: center;
+    /* justify-content: center; */
     justify-content: space-evenly;
-    align-items: center;
+    /* align-items: center; */
     
+}
+ul{
+    margin-top: 25px;
 }
 ul a{
     display: block;
