--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ footer{
     
 }
 ul{
-    margin-top: 25px;
+    margin-top: 30px;
 }
 ul a{
     display: block;
@@ -219,4 +219,9 @@ ul a{
     font-size: 0.85rem;
     margin-top: 10px;
 
+}
+.footer-panel3{
+    background-color:  #222f3d;
+    color: white;
+    border-top: 1px solid  #37475a;
 }
