--- a/style.css
+++ b/style.css
@@ -225,9 +225,14 @@ ul a{
     color: white;
     border-top: 1px solid  #37475a;
     height: 68px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .logo{
     background-image: url("amazon_logo.png");
     background-size: cover;
     height: 50px;
+    width: 100px;
+    
 }
