--- a/style.css
+++ b/style.css
@@ -236,3 +236,18 @@ ul a{
     width: 100px;
     
 }
+.footer-panel4{
+    background-color: #131A22;
+    height: 76px;
+     /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.pages{
+    font-size: 0.8rem;
+    color: white;
+}
+.copyright{
+    font-size: 15px;
+    color: white;
+}
