--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ ul a{
 }
 .footer-panel4{
     background-color: #131A22;
-    height: 76px;
+    height: 80px;
      /* display: flex;
     justify-content: center;
     align-items: center; */
@@ -246,8 +246,11 @@ ul a{
 .pages{
     font-size: 0.8rem;
     color: white;
+    text-align: center;
 }
 .copyright{
     font-size: 15px;
     color: white;
+    text-align: center;
+
 }
