--- a/style.css
+++ b/style.css
@@ -239,18 +239,17 @@ ul a{
 .footer-panel4{
     background-color: #131A22;
     height: 80px;
+    font-size: 0.8rem;
+    text-align: center;
+    color: white;
+
      /* display: flex;
     justify-content: center;
     align-items: center; */
 }
 .pages{
-    font-size: 0.8rem;
-    color: white;
-    text-align: center;
+    padding-top: 25px;
 }
 .copyright{
-    font-size: 15px;
-    color: white;
-    text-align: center;
-
+    padding-top: 5px;
 }
